# rag-tutorial

./: .gitignore  README.md  build_index_standalone.py  debug.py  pyproject.toml  test_search.py
app/: chunker.py  config.py  generator.py  indexer.py  main.py  retriever.py
commands_examples/: 01_planning_phase.md  02_vision_sequential.md  03_conventions.md  04_tasklist.md  05_workflow.md  README.md
data/raw/: datasets.json
doc/: 00_project_idea.md  README.md  conventions.md  tasklist.md  vision.md  workflow.md
homework/: SUBMISSION.md
scripts/: build_index.py  ingest.py
tests/: test_chunking.py  test_retrieval.py
