[project]
name = "rag-tutorial"
version = "0.1.0"
description = "RAG system for Russian texts with TF-IDF and embedding search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "pytest>=7.0.0",
    "torchvision>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "tests*", "scripts*", "doc*"]

[tool.setuptools.package-data]
rag-tutorial = ["py.typed"]
